# legal_ie

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/onto/: criminal.v0.ttl  criminal.v1.light.ttl  criminal.v1.ttl  criminal.v2.csv  criminal.v2.ttl  criminal.v3.csv  criminal.v3.ttl
data/reports/: durations.csv  durations_fines.csv  offense_decision.csv  offense_vc.csv  triple_count.csv
docker/fuseki/: docker-compose.yml
docker/jena-fuseki/: docker-compose.yml
legal_ie/: lake.py  pdf.py  scrape.py  util.py
nbs/: plotting_hists.ipynb
queries/: cust.punishment.duration.rq  fines.hist.rq  offence.decision.rq  offence.types.rq  triple.count.rq
run/: cast_input.py  cast_map.py  cast_text_triple.py  cast_triple.py  fetch.py  fetch_court_mapping.py  fetch_input_lake.py  lake_analysis.py  ttl2csv_png.py  upload_ttl.py
run/obsolete/: cast_map.py
run/test/: upload_ttl.py
~/data/legal/current.v3/output/: case.0.json
