[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Alexander Belikov <abelikov@gmail.com>"]
description = ""
name = "legal_ie"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.7"
langchain = "^0.3.12"
langchain-openai = "^0.2.12"
networkx = "^3.4.2"
pandas = "^2.2.3"
pymupdf = "^1.25.1"
python = "^3.10"
python-dotenv = "^1.0.1"
rdflib = "^7.1.1"
selenium = "^4.27.1"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.9.1"
pre-commit = "^3.3.3"
pydotplus = "^2.0.2"
pygraphviz = "^1.13"
pylint = "^3.2.6"
pytest = "^8.3.3"
