[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legal_ie"
version = "0.2.0"
description = ""
authors = [{ name = "Alexander Belikov", email = "alexander@growgraph.dev" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "click>=8.1.8,<9",
    "langchain>=0.3.14,<0.4",
    "langchain-openai>=0.3.18",
    "networkx>=3.4.2,<4",
    "pandas>=2.2.3,<3",
    "pymupdf>=1.25.1,<2",
    "python-dotenv>=1.0.1,<2",
    "rdflib>=7.1.1,<8",
    "selenium>=4.27.1,<5",
    "tqdm>=4.67.1,<5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1,<2",
    "matplotlib>=3.9.1,<4",
    "pre-commit>=4.2.0",
    "pydotplus>=2.0.2,<3",
    "pygraphviz~=1.13",
    "pylint>=3.2.6,<4",
    "pytest>=8.3.3,<9",
    "seaborn>=0.13.2,<0.14",
]
