[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "jupyter>=1.1.1,<2",
  "matplotlib>=3.9.1,<4",
  "pre-commit>=4.2.0",
  "pydotplus>=2.0.2,<3",
  "pygraphviz~=1.13",
  "pylint>=3.2.6,<4",
  "pytest>=8.3.3,<9",
  "seaborn>=0.13.2,<0.14"
]

[project]
authors = [{email = "alexander@growgraph.dev", name = "Alexander Belikov"}]
dependencies = [
  "click>=8.1.8,<9",
  "langchain-openai>=0.3.18",
  "langchain>=0.3.14,<0.4",
  "networkx>=3.4.2,<4",
  "pandas>=2.2.3,<3",
  "pymupdf>=1.25.1,<2",
  "python-dotenv>=1.0.1,<2",
  "rdflib>=7.1.1,<8",
  "selenium>=4.27.1,<5",
  "tqdm>=4.67.1,<5"
]
description = ""
name = "legal_ie"
readme = "README.md"
requires-python = "~=3.12"
version = "0.2.0"
